--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: สร้าง blog ด้วย Jekyll (เจ-เกิ้ล)
+title: มนุษย์ทดลอง
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Blog ที่แนะนำวิธีสร้าง blog โดยใช้โปรแกรม Jekyll อย่างง่ายและฟรี
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  poolng
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
