--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: มนุษย์ทดลอง
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Blog ที่แนะนำวิธีสร้าง blog โดยใช้โปรแกรม Jekyll อย่างง่ายและฟรี
+  Blog ที่ทดลองสร้างโดยใช้โปรแกรม Jekyll 
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
